ld64: check xcodeversion and relocate OTHER_CFLAGS
git-svn-id: https://svn.macports.org/repository/macports/trunk@73005 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/ld64/Portfile
+++ b/dports/devel/ld64/Portfile
@@ -2,6 +2,8 @@
 
 PortSystem              1.0
 PortGroup               xcode 1.0
+PortGroup               xcodeversion 1.0
+minimum_xcodeversions   {10 3.2.3}
 
 name                    ld64
 version                 97.14
@@ -37,11 +39,6 @@ platform darwin 9 {
     xcode.target        all ObjectDump machocheck
     xcode.destroot.path ${prefix}/bin
 
-    pre-configure {
-        build.env       OTHER_CFLAGS='[exec ${prefix}/bin/llvm-config --cflags]'
-        destroot.env    OTHER_CFLAGS='[exec ${prefix}/bin/llvm-config --cflags]'
-    }
-
     post-patch {
         reinplace "s|/usr/share/man/man1|${prefix}/share/man/man1|g" \
             ${worksrcpath}/ld64.xcodeproj/project.pbxproj
@@ -50,6 +47,16 @@ platform darwin 9 {
         reinplace "s|\$(RC_ProjectSourceVersion)|${version}|g" \
             ${worksrcpath}/ld64.xcodeproj/project.pbxproj
     }
+
+    pre-build {
+        build.env       OTHER_CFLAGS='[exec ${prefix}/bin/llvm-config --cflags]'
+        destroot.env    OTHER_CFLAGS='[exec ${prefix}/bin/llvm-config --cflags]'
+    }
+    pre-destroot {
+        build.env       OTHER_CFLAGS='[exec ${prefix}/bin/llvm-config --cflags]'
+        destroot.env    OTHER_CFLAGS='[exec ${prefix}/bin/llvm-config --cflags]'
+    }
+
 }
 
 
@@ -80,11 +87,6 @@ platform darwin 10 {
     xcode.build.settings HEADER_SEARCH_PATHS=${workpath}/libunwind/include
     xcode.destroot.settings HEADER_SEARCH_PATHS=${workpath}/libunwind/include
 
-    pre-configure {
-        build.env       OTHER_CFLAGS='[exec ${prefix}/bin/llvm-config --cflags]'
-        destroot.env    OTHER_CFLAGS='[exec ${prefix}/bin/llvm-config --cflags]'
-    }
-
     post-extract {
         system "cd ${workpath} && ${svn.cmd} ${svn.pre_args} ${svn.method} ${svn.url}@${svn.revision}"
         file mkdir ${workpath}/libunwind/include/mach-o/arm
@@ -104,6 +106,15 @@ platform darwin 10 {
         foreach f [glob ${workpath}/libunwind/include/libunwind/*.h*] {
             reinplace "s|lldb_private|libunwind|g" $f
         }
+    }
+
+    pre-build {
+        build.env       OTHER_CFLAGS='[exec ${prefix}/bin/llvm-config --cflags]'
+        destroot.env    OTHER_CFLAGS='[exec ${prefix}/bin/llvm-config --cflags]'
+    }
+    pre-destroot {
+        build.env       OTHER_CFLAGS='[exec ${prefix}/bin/llvm-config --cflags]'
+        destroot.env    OTHER_CFLAGS='[exec ${prefix}/bin/llvm-config --cflags]'
     }
 
     post-destroot {
