fcgi: add download location for old distfiles
git-svn-id: https://svn.macports.org/repository/macports/trunk@73006 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/www/fcgi/Portfile
+++ b/dports/www/fcgi/Portfile
@@ -15,7 +15,9 @@ long_description \
    APIs.  This is the C development kit.
 
 homepage            http://www.fastcgi.com/
-master_sites        ${homepage}/dist/
+master_sites        ${homepage}dist/ \
+                    ${homepage}dist/old/
+
 checksums           md5 d15060a813b91383a9f3c66faf84867e
 platforms           darwin
 
