ebook-tools: add license info
git-svn-id: https://svn.macports.org/repository/macports/trunk@73008 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/textproc/ebook-tools/Portfile
+++ b/dports/textproc/ebook-tools/Portfile
@@ -6,6 +6,8 @@ name                ebook-tools
 version             0.1.1
 categories          textproc
 maintainers         nomaintainer
+license             MIT
+
 description         Access and convert various ebook file formats 
 long_description    ${description}
 
