py26-sqlalchemy-migrate: Add missing dependencies
git-svn-id: https://svn.macports.org/repository/macports/trunk@73012 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/python/py26-sqlalchemy-migrate/Portfile
+++ b/dports/python/py26-sqlalchemy-migrate/Portfile
@@ -6,6 +6,7 @@ PortGroup           python26 1.0
 
 name                py26-sqlalchemy-migrate
 version             0.6
+revision            2
 categories          python
 platforms           darwin
 maintainers         akitada openmaintainer
@@ -26,5 +27,5 @@ checksums           md5     84a983d9cf15cf9bf5dd1b44785f065a \
                     sha1    fda7c575c652a6833ab783bf25a522df56a1e6d1 \
                     rmd160  a0defbf99b95d5b0d326e0f111cf725aefd965d9
 
-depends_lib         port:py26-distribute
+depends_lib         port:py26-distribute port:py26-tempita port:py26-decorator
 distname            sqlalchemy-migrate-${version}
