python/py26-pyfftw3: update to 0.2.1
git-svn-id: https://svn.macports.org/repository/macports/trunk@73013 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/python/py26-pyfftw3/Portfile
+++ b/dports/python/py26-pyfftw3/Portfile
@@ -4,7 +4,7 @@ PortSystem    1.0
 PortGroup     python26 1.0
 
 name          py26-pyfftw3
-version       0.2
+version       0.2.1
 set branch    [join [lrange [split ${version} .] 0 1] .]
 categories    python math
 platforms     darwin
@@ -15,12 +15,12 @@ long_description  Python bindings to the FFTW3 C-library for computing \
   discrete Fourier transforms.
 
 homepage      https://launchpad.net/pyfftw
-master_sites  http://launchpad.net/pyfftw/trunk/${branch}/+download/
+master_sites  http://launchpad.net/pyfftw/trunk/${version}/+download/
 distname      PyFFTW3-${version}
 
-checksums     md5 41abaf57bc86bf57e069c95e78292092 \
-              sha1 b59c9e44e8c2b9558ed026d1484d4a09c2bbdbe7 \
-              rmd160 927c37576830df24ad1107efd007c3a1f9b784f2
+checksums     md5     0066be45345591a6b4a97eb3779c7346 \
+              sha1    581f5fa3c5e2b74cafab468eeb95d6bb4d7d4628 \
+              rmd160  2d85e95b5347d938e833cceda8de2eeea480cff2
 
 depends_lib-append  port:fftw-3 \
                     port:fftw-3-single \
