finch is obsolete; replaced by pidgin +finch; see #27092
git-svn-id: https://svn.macports.org/repository/macports/trunk@73015 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/finch/Portfile
+++ b/dports/net/finch/Portfile
@@ -4,72 +4,20 @@
 PortSystem          1.0
 
 name                finch
-conflicts           pidgin
-version             2.7.0
+replaced_by         pidgin
+version             2.7.4
 categories          net
 platforms           darwin
 maintainers         nomaintainer
 description         Multi-protocol Instant Messaging client
-long_description    Pidgin is an Open Source clone of America OnLine's \
-                    Instant Messenger client that uses GTK+ version 2.  It \
-                    features multiple groups, group chat, user information \
-                    fetching and registration, time stamping, and more.  It \
-                    also supports other IM protocols, including Yahoo!, MSN, \
-                    ICQ, Jabber, Napster, IRC, and Zephyr via included \
-                    plugins.
+long_description    obsolete port for finch\; now use the pidgin port's +finch variant
 
 homepage            http://www.pidgin.im/
-master_sites        sourceforge:pidgin
-checksums           md5     63a36f91d29f5ac5a402ffd2d7dbbb72 \
-                    sha1    7170aaae5e6f4039870eb5e0c5837d55285b758f \
-                    rmd160  45e4b5a9acb9c4080ce6b33cedbf9b962883ca25
+distfiles
 
-dist_subdir         pidgin
-distname            pidgin-${version}
-use_bzip2           yes
-
-depends_lib         port:audiofile \
-                    port:libao \
-                    port:libxml2 \
-                    port:nspr \
-                    port:nss \
-                    path:lib/pkgconfig/glib-2.0.pc:glib2 \
-                    port:intltool \
-                    port:libidn
-
-patchfiles          patch-finch_libgnt_Makefile.in.diff patch-finch_libgnt_gntwm.c gst.diff
-
-# nss is not universal
-universal_variant   no
-
-configure.args      --disable-avahi \
-                    --disable-gtkui \
-                    --disable-dbus \
-                    --disable-gstreamer \
-                    --disable-gtkspell \
-                    --disable-meanwhile \
-                    --disable-nm \
-                    --disable-screensaver \
-                    --disable-sm \
-                    --disable-startup-notification \
-                    --disable-vv \
-                    --enable-nss \
-                    --mandir=${prefix}/share/man \
-                    --with-nspr-includes=${prefix}/include/nspr \
-                    --with-nspr-libs=${prefix}/lib/nspr \
-                    --with-nss-includes=${prefix}/include/nss \
-                    --with-nss-libs=${prefix}/lib/nss \
-                    --without-x
-configure.ldflags-append    -bind_at_load
-
-post-destroot {
-    fs-traverse file ${destroot}${prefix}/lib/perl5 {
-        if {[file tail ${file}] == "perllocal.pod"} {
-            delete ${file}
-        }
-    }
+pre-configure {
+    ui_error "The finch port is obsolete; please install the pidgin port with the +finch variant instead."
+    return -code error "obsolete port"
 }
 
-livecheck.type      regex
-livecheck.url       http://sourceforge.net/projects/pidgin/files/
-livecheck.regex     {/pidgin-([0-9.]+)\.tar}
+livecheck.type      none
