py31-djvubind: update to version 1.0.1; closes #27080
git-svn-id: https://svn.macports.org/repository/macports/trunk@73016 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/python/py31-djvubind/Portfile
+++ b/dports/python/py31-djvubind/Portfile
@@ -5,7 +5,7 @@ PortSystem                      1.0
 PortGroup                       python31 1.0
 
 name                            py31-djvubind
-version                         0.3.1
+version                         1.0.1
 platforms                       darwin
 supported_archs                 noarch
 maintainers                     raphael openmaintainer
@@ -30,16 +30,9 @@ use_bzip2                       yes
 
 master_sites                    googlecode:djvubind
 
-checksums                       md5     a7fb02c2e5a88c46e548edfab455116d \
-                                sha1    c075658e94f3458f3896bdf7a9ac3f3c423d26cd \
-                                rmd160  5cc13036190f83356090c4471360e9203b25e54f
-
-# Workaround for case insensitive file systems:
-# The dist archive contains a directory 'Djvubind' and a python script 'djvubind' in the same directory.
-extract.post_args-append        --exclude ${distname}/djvubind
-post-extract {                  system "/usr/bin/gnutar --no-same-owner -C ${worksrcpath} -xjf ${distpath}/${distfiles} ${distname}/djvubind"
-                                move ${worksrcpath}/${distname} ${worksrcpath}/bin
-}
+checksums                       md5     16b9db4bd364c35babedd1eef188ca46 \
+                                sha1    d167e7a1e4c947e75d404df0574d1bc82ed29b9c \
+                                rmd160  b34e203afac927fe5eb3b4eba3582d5d9088886d
 
 patchfiles                      patch-setup.py.diff
 post-patch {                    reinplace "s|/usr/bin/env python3|${python.bin}|" ${worksrcpath}/bin/djvubind
@@ -51,7 +44,10 @@ post-destroot {                 ln -s "${python.prefix}/share/man/man1/djvubind.
                                 set docdir ${destroot}${prefix}/share/doc/${name}
                                 xinstall -d ${docdir}
                                 xinstall -m 644 -W ${worksrcpath} \
-                                    readme \
+                                    README \
                                     docs/changelog \
                                     ${docdir}
+                                set sysconfigdir ${destroot}${prefix}/etc/djvubind
+                                xinstall -d ${sysconfigdir}
+                                ln -s "${python.prefix}/etc/djvubind/config" "${sysconfigdir}/config"
 }
