devel/openssl: rename man pages with ssl suffix, #19343 (maintainer timeout)
git-svn-id: https://svn.macports.org/repository/macports/trunk@73018 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/openssl/Portfile
+++ b/dports/devel/openssl/Portfile
@@ -5,6 +5,7 @@ PortGroup  muniversal 1.0
 
 name			openssl
 version			1.0.0a
+revision		1
 epoch			1
 platforms		darwin freebsd
 categories		devel security
@@ -42,7 +43,7 @@ variant rfc3779 description {enable RFC 3779: X.509 Extensions for IP Addresses 
 use_parallel_build	no
 
 destroot.destdir	INSTALL_PREFIX=${destroot}
-destroot.args		MANDIR=${prefix}/share/man
+destroot.args		MANDIR=${prefix}/share/man MANSUFFIX=ssl
 
 test.run		yes
 
