--- a/dports/devel/libdatrie/Portfile
+++ b/dports/devel/libdatrie/Portfile
@@ -1,32 +1,32 @@
+# -*- coding: utf-8; mode: tcl; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:ft=tcl:et:sw=4:ts=4:sts=4
 # $Id$
 
-PortSystem      1.0
+PortSystem          1.0
 
-name            libdatrie
-version         0.1.2
-categories      devel
-maintainers     nomaintainer
-description     An Implementation of Double-Array Trie.
-long_description \
-                ${description}
-platforms       darwin
-homepage        http://linux.thai.net/~thep/datrie/datrie.html
-master_sites    http://ftp.yz.yamagata-u.ac.jp/debian/pool/main/libd/libdatrie/ \
-                http://ftp.debian.org/debian/pool/main/libd/libdatrie/
-distname        ${name}_${version}.orig
-patchfiles      patch-datrie_Makefile.in.diff
-checksums       md5 3eaedd5452149e11547a0dc74ee3fcfd \
-                sha1 cffda60f9f5a51a256273c72c5abed0448a6df4c \
-                rmd160 6bf5155b282974a4b6cd1bfadd87139b33710f49
+name                libdatrie
+version             0.1.2
+categories          devel
+platforms           darwin
+maintainers         nomaintainer
 
-worksrcdir      ${name}-${version}
+description         An Implementation of Double-Array Trie.
+long_description    ${description}
 
-configure.args  --mandir=${prefix}/share/man --infodir=${prefix}/share/info --disable-doxygen-doc
+homepage            http://linux.thai.net/~thep/datrie/datrie.html
+master_sites        ftp://linux.thai.net/pub/ThaiLinux/software/libthai/
+
+checksums           md5     3eaedd5452149e11547a0dc74ee3fcfd \
+                    sha1    cffda60f9f5a51a256273c72c5abed0448a6df4c \
+                    rmd160  6bf5155b282974a4b6cd1bfadd87139b33710f49
+
+patchfiles          patch-datrie_Makefile.in.diff
+
+configure.args      --mandir=${prefix}/share/man --infodir=${prefix}/share/info --disable-doxygen-doc
 
 use_parallel_build  yes
 
-test.run        yes
-test.target     check
+test.run            yes
+test.target         check
 
 post-destroot {
     xinstall -m 755 -d ${destroot}${prefix}/share/doc/${name}
