libdatrie: add livecheck
git-svn-id: https://svn.macports.org/repository/macports/trunk@73020 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/libdatrie/Portfile
+++ b/dports/devel/libdatrie/Portfile
@@ -38,3 +38,7 @@ variant with_doxygen description {Create and install API docs} {
     configure.args-delete   --disable-doxygen-doc
     configure.args-append   --with-html-docdir=${prefix}/share/doc/${name}/html
 }
+
+livecheck.type      regex
+livecheck.url       ${homepage}
+livecheck.regex     "${name}-(\\d+(?:\\.\\d+)*)${extract.suffix}"
