--- a/dports/lang/gccxml-devel/Portfile
+++ b/dports/lang/gccxml-devel/Portfile
@@ -18,3 +18,5 @@ cvs.root 		:pserver:anoncvs@www.gccxml.org:/cvsroot/GCC_XML
 cvs.date 		2010-10-14
 cvs.module 		gccxml
 worksrcdir 		gccxml
+
+universal_variant no
