fix old javascript issue on Snow Leopard x86_64 (#25467)
git-svn-id: https://svn.macports.org/repository/macports/trunk@73022 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/sysutils/rpm52/Portfile
+++ b/dports/sysutils/rpm52/Portfile
@@ -37,7 +37,7 @@ depends_run		port:openssl \
                         bin:bzip2:bzip2 \
                         bin:unzip:unzip
 
-patchfiles		patch-macros.in
+patchfiles		patch-macros.in patch-jsstddef.h patch-jsprf.c
 
 post-patch {
 	file copy ${worksrcpath}/js/src/jsfile.msg ${worksrcpath}/js/rpmjsfile.msg
