Fix incomplete build dependencies noted in #26762
A slight change in variant semantics: the default variant '+html' now
only installs the HTML and Info files.  The new variant '+pdf' now
installs documentation in HTML, PDF, and Info formats while properly
declaring dependency on the 'dvips' binary.  The revision remains the
same, as we do not wish to cause a reinstallation for users that have
successfully installed the port even though we have changed the
meaning of the variants.

Port now listed as openmaintainer as I have not heard a peep out of
waqar and gwright in over a year.


git-svn-id: https://svn.macports.org/repository/macports/trunk@73024 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/lang/sbcl/Portfile
+++ b/dports/lang/sbcl/Portfile
@@ -8,7 +8,7 @@ version		1.0.43
 revision        0
 set subrevision	""
 categories	lang
-maintainers	gwright waqar easieste
+maintainers	openmaintainer easieste gwright waqar 
 platforms	darwin
 description	The Steel Bank Common Lisp system
 long_description	\
@@ -24,6 +24,7 @@ master_sites	sourceforge
 use_bzip2	yes
 
 patchfiles	patch-use-mach-exception-handler.diff 
+
 		
 distfiles	${name}-${version}-source${subrevision}${extract.suffix}
 
@@ -97,11 +98,21 @@ post-build {
 	}
 }
 
-default_variants	+html
+default_variants      +html
 
-variant html description {Builds the SBCL and ASDF documentation as HTML} {} 
+variant html description {Installs documentation in HTML and Info formats} {
+    patchfiles-append patch-make-doc.diff
+    depends_build-append bin:texi2dvi:texinfo
+    depends_build-append bin:makeinfo:texinfo
+} 
 
-variant threads description {enable threaded runtime} {
+variant pdf description {Installs documentation in PDF, HTML and Info formats} {
+    depends_build-append bin:divps:texinfo-bin
+    depends_build-append bin:texi2dvi:texinfo
+    depends_build-append bin:makeinfo:texinfo
+} 
+
+variant threads description {Enable multi-threaded runtime} {
 	patchfiles-append patch-base-target-features.diff
 }
 
