scbl: Correct typo that prevented variant '+pdf' from installing
git-svn-id: https://svn.macports.org/repository/macports/trunk@73025 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/lang/sbcl/Portfile
+++ b/dports/lang/sbcl/Portfile
@@ -107,7 +107,7 @@ variant html description {Installs documentation in HTML and Info formats} {
 } 
 
 variant pdf description {Installs documentation in PDF, HTML and Info formats} {
-    depends_build-append bin:divps:texinfo-bin
+    depends_build-append bin:dvips:texlive-bin
     depends_build-append bin:texi2dvi:texinfo
     depends_build-append bin:makeinfo:texinfo
 } 
