Make '+pdf' and '+html' mutually exclusive
git-svn-id: https://svn.macports.org/repository/macports/trunk@73027 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/lang/sbcl/Portfile
+++ b/dports/lang/sbcl/Portfile
@@ -100,13 +100,14 @@ post-build {
 
 default_variants      +html
 
-variant html description {Installs documentation in HTML and Info formats} {
+variant html conflicts pdf description {Installs documentation in HTML and Info formats} {
     patchfiles-append patch-make-doc.diff
     depends_build-append bin:texi2dvi:texinfo
     depends_build-append bin:makeinfo:texinfo
 } 
 
-variant pdf description {Installs documentation in PDF, HTML and Info formats} {
+variant pdf conflicts html description {Installs documentation in PDF, HTML and Info formats} {
+    patchfiles-delete patch-make-doc.diff
     depends_build-append bin:dvips:texlive-bin
     depends_build-append bin:texi2dvi:texinfo
     depends_build-append bin:makeinfo:texinfo
