xorg-libXevie: Don't need to autoreconf
git-svn-id: https://svn.macports.org/repository/macports/trunk@73031 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/x11/xorg-libXevie/Portfile
+++ b/dports/x11/xorg-libXevie/Portfile
@@ -20,14 +20,10 @@ checksums           md5     ffa3f82595211609140440505b0e6301 \
 use_bzip2   yes
 use_parallel_build      yes
 
-depends_build   port:pkgconfig \
-                port:xorg-util-macros
+depends_build   port:pkgconfig
 
 depends_lib	port:xorg-libXext \
                 port:xorg-evieproto
-
-use_autoreconf yes
-autoreconf.args -fvi
 
 livecheck.type  regex
 livecheck.url   [lindex ${master_sites} 0]?C=M&O=D
