gwenhywfar(4) and aqbanking(5): new ports for QT4, being in conflict with QT3 versions, now open for further tuning with respect to qt4 port group
git-svn-id: https://svn.macports.org/repository/macports/trunk@73032 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/aqbanking/Portfile
+++ b/dports/devel/aqbanking/Portfile
@@ -4,12 +4,13 @@
 PortSystem        1.0
 
 name              aqbanking
-version           4.1.4
+version           4.2.4
+revision          1
 # this is specific to this port and *version* for downloading it
-set release       41
+set release       50
 
 categories        devel net finance
-maintainers       nomaintainer
+maintainers       mk openmaintainer
 platforms         darwin
 
 description       a generic online banking interface
@@ -23,10 +24,12 @@ long_description  aqbanking is a generic online banking interface mainly \
 homepage          http://www2.aquamaniac.de/sites/aqbanking/index.php
 master_sites      http://www2.aquamaniac.de/sites/download/download.php?package=03&release=${release}&file=01&dummy=
 
-checksums           md5     7936669649f66b880200cdad23692586 \
-                    sha1    7b80bb570c79beaae5333746093e3cd1a20fd0e6 \
-                    rmd160  766519c7ed860ec5044feccedab82ae7b3ae5a8a
-                                    
+checksums         md5     244f5c6e470b55452d9f2cb6c081c137 \
+                  sha1    a140500ed11cf3ceefed16e202e4a1043cdb07f6 \
+                  rmd160  5319b3012bb2a3fb1e44bb747f9b6f5dff7efcd2
+
+conflicts         aqbanking5
+
 depends_lib       port:gwenhywfar \
                   port:qt3 \
                   port:ktoblzcheck \
@@ -42,22 +45,23 @@ configure.cppflags-append "-L${prefix}/lib"
 configure.cflags-append   "-L${prefix}/lib"
 configure.ldflags-append  "-Wl,-dylib_file,/System/Library/Frameworks/OpenGL.framework/Versions/A/Libraries/libGL.dylib:/System/Library/Frameworks/OpenGL.framework/Versions/A/Libraries/libGL.dylib"
 configure.env             QTDIR=${prefix}/lib/qt3
-configure.args            --with-qt-dir=${prefix}/lib/qt3 \
+configure.args            --with-qt-libs=${prefix}/lib/qt3 \
                           --enable-static \
                           --disable-dependency-tracking \
                           --with-frontends="cbanking g2banking qbanking" \
                           --with-backends="aqhbci aqofxconnect aqnone" \
-                          --enable-libofx \
-                          --disable-chipcard-client \
-                          --disable-chipcard-client-test
+                          --enable-libofx
+# not supplied anymore in version 4.2.4
+#                          --disable-chipcard-client \
+#                          --disable-chipcard-client-test
 
-variant disable_ofx description "Disable OFX support" {
-    depends_lib-delete      port:libofx
-    configure.args-delete   --with-backends="aqhbci aqofxconnect aqnone"
-    configure.args-delete   --enable-libofx
-    configure.args-append   --with-backends="aqhbci aqnone" \
-                            --disable-libofx
-}
+#variant disable_ofx description "Disable OFX support" {
+#    depends_lib-delete      port:libofx
+#    configure.args-delete   --with-backends="aqhbci aqofxconnect aqnone"
+#    configure.args-delete   --enable-libofx
+#    configure.args-append   --with-backends="aqhbci aqnone" \
+#                            --disable-libofx
+#}
 
 #variant enable_geldkarte conflicts disable_ofx description "Enable geldkarte" {
 #    depends_lib-append      port:libchipcard
