--- a/dports/devel/gwenhywfar4/Portfile
+++ b/dports/devel/gwenhywfar4/Portfile
@@ -2,11 +2,11 @@
 
 PortSystem        1.0
 
-name              gwenhywfar
-version           3.11.3
-revision          2
+name              gwenhywfar4
+version           4.0.1
+
 # this is specific to this port and *version* for downloading it
-set release       31
+set release       54
 platforms         darwin
 
 categories        devel net finance
@@ -17,21 +17,34 @@ long_description  ${description}
 
 homepage          http://www2.aquamaniac.de/sites/aqbanking/index.php
 master_sites      http://www2.aquamaniac.de/sites/download/download.php?package=01&release=${release}&file=01&dummy=
+distname          gwenhywfar-${version}
 
-checksums         md5     9ab62d881a0f39d4b07ea0badff7201f \
-                  sha1    97c8f2232416c224f096ec9958e5d9d70291e012 \
-                  rmd160  a04e394ff0b316291c64c4cfa6630185194a2a4b
+checksums         md5     513ea7b5b22edf512fa7d825ef544954 \
+                  sha1    6fac6d994197341ea82e5593f338751a840d1de7 \
+                  rmd160  cba627646d77d3f84c13acb823ee67a5d4d16203
 
-conflicts         gwenhywfar4
+conflicts         gwenhywfar
 
 depends_lib       port:openssl \
                   port:libgcrypt \
                   port:gettext \
                   port:libxml2 \
-                  port:gnutls
-depends_build     port:libtool
+                  port:gnutls \
+                  port:qt4-mac
 
-configure.args    --enable-static
+depends_build     port:libtool \
+                  port:pkgconfig
+
+configure.args    --with-qt4-libs=${prefix}/lib \
+                  --with-qt4-includes=${prefix}/include \
+                  --with-qt4-moc=${prefix}/bin/moc \
+                  --with-qt4-uic=${prefix}/bin/uic \
+                  --enable-static
+
+patchfiles        patch-qt4-configure.diff
+
+patch.dir         ${workpath}/${distname}
+patch.pre_args    -p1
 
 variant enable_local_install description "Enable local installation mode (plugins, data, locale and config are located relatively to the binary)" {
     configure.args-append   --enable-local-install 
@@ -39,4 +52,4 @@ variant enable_local_install description "Enable local installation mode (plugin
 
 livecheck.type    regex
 livecheck.url     http://www2.aquamaniac.de/sites/download/packages.php?package=01&showall=1
-livecheck.regex   ${name}-(\[0-9.\]*)\\.tar
+livecheck.regex   ${distname}-(\[0-9.\]*)\\.tar
