glabels:   * updates glabels to latest stable version 2.2.8   * updates master_sites and livecheck   * adds +eds variant to add support Evolution Data Server   * closes #27055, maintainer timeout.
git-svn-id: https://svn.macports.org/repository/macports/trunk@73033 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/glabels/Portfile
+++ b/dports/gnome/glabels/Portfile
@@ -4,7 +4,8 @@
 PortSystem 1.0
 
 name                glabels
-version             2.2.2
+version             2.2.8
+set branch          [join [lrange [split ${version} .] 0 1] .]
 categories          gnome
 platforms           darwin
 maintainers         gmail.com:craig.cottingham
@@ -13,10 +14,14 @@ long_description    gLabels is a program for creating labels and business cards 
                     for the GNOME desktop environment.
 homepage            http://glabels.sourceforge.net/
 
-master_sites        sourceforge
-checksums           md5 ee9f8687904b070715dac59efe7a7dc5 \
-                    sha1 1792e4b5f6142dc3022dcb455d53fa5b3a31b319 \
-                    rmd160 65aee5f9837b104c123a6559ea9d3db63841c4e1
+master_sites        gnome:sources/${name}/${branch}/
+use_bzip2           yes
+
+checksums           md5     8e0ac4b19de68d55e33aef6a5544f0e5 \
+                    sha1    65884fde0744fe6b8aaf5bb39deee427d292dce3 \
+                    rmd160  072aac5328efd548c5a0a994523eba9753158d3d
+
+depends_build       port:pkgconfig
 
 depends_lib         port:gtk2 \
                     port:libgnomeui \
@@ -25,11 +30,28 @@ depends_lib         port:gtk2 \
 
 patchfiles          patch-iec16022-0.2.1-iec116022ecc200.c.diff
 
-configure.args      --mandir=${prefix}/share/man \
-					--disable-update-mimedb \
-					--disable-update-desktopdb
+configure.args      --without-libebook \
+                    --disable-update-mimedb \
+		    --disable-update-desktopdb
 
 post-activate {
 	system "${prefix}/bin/update-desktop-database -q ${prefix}/share/applications; true"
 	system "${prefix}/bin/update-mime-database ${prefix}/share/mime; true"
 }
+
+variant eds description {Build with Evolution Data Server support} {
+        depends_lib-append    port:evolution-data-server
+        configure.args-delete --without-libebook
+}
+
+#
+# evolution-data-server -> nss is not universal
+#
+
+if { [variant_isset eds] } {
+    universal_variant no
+}
+
+livecheck.type      regex
+livecheck.url       http://ftp.gnome.org/pub/gnome/sources/${name}/${branch}/
+livecheck.regex     {LATEST-IS-(\d+(?:\.\d+)*)}
