libusb: fix livecheck, closes #27063, maintainer timeout.
git-svn-id: https://svn.macports.org/repository/macports/trunk@73034 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/libusb/Portfile
+++ b/dports/devel/libusb/Portfile
@@ -24,4 +24,4 @@ checksums       md5 37d34e6eaa69a4b645a19ff4ca63ceef \
 use_bzip2       yes
 
 livecheck.url   http://sourceforge.net/projects/libusb/files/libusb-1.0/
-livecheck.regex /${name}-(\[0-9\]+\\.\[0-9\]+\\.\[0-9\]+)\\.tar\\.bz2'
+livecheck.regex "${name}-(\[0-9\]+\\.\[0-9\]+\\.\[0-9\]+)${extract.suffix}"
