--- a/dports/net/deluge/Portfile
+++ b/dports/net/deluge/Portfile
@@ -5,8 +5,7 @@ PortSystem      1.0
 PortGroup       python26 1.0
 
 name            deluge
-version         1.3.0
-revision        1
+version         1.3.1
 categories      net gnome python
 maintainers     devans openmaintainer
 description     A GNOME BitTorrent client.
@@ -21,9 +20,9 @@ dist_subdir     python/${name}/${version}_${revision}
 
 use_bzip2       yes
 
-checksums       md5     5fca34e2e31753a8ba0ccb942f0e993e \
-                sha1    8acefff67bd82e38314b43887bd5f10da9a12052 \
-                rmd160  dca83b23603a140d4abbb4de7672bf4259018167
+checksums       md5     496a9cfaf01e6cf7ab141498acf2d1f1 \
+                sha1    ed63dd6fa5d485b5091eaa79e29db3e118741b8e \
+                rmd160  12ad66d388fdb96885be691c94f372a2343cf159
 
 depends_lib-append \
                 port:libtorrent-rasterbar \
@@ -31,7 +30,9 @@ depends_lib-append \
                 port:dbus-python26 \
                 port:librsvg \
                 port:py26-chardet \
+                port:py26-game \
                 port:py26-gtk \
+                port:py26-notify-python \
                 port:py26-distribute \
                 port:py26-xdg \
                 port:py26-twisted \
