New version of the framework. Faster load of ports list and more reliable.
git-svn-id: https://svn.macports.org/repository/macports/trunk@73036 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/MacPorts_Framework/Portfile
+++ b/dports/devel/MacPorts_Framework/Portfile
@@ -4,7 +4,7 @@ PortSystem 1.0
 PortGroup xcode 1.0
 
 name                    MacPorts_Framework
-version                 1.2.0
+version                 1.2.1
 categories              devel macports framework
 maintainers             juanger armahg
 description             Cocoa framework for MacPorts.
@@ -19,7 +19,7 @@ platforms               macosx
 
 fetch.type              svn
 svn.url                 http://svn.macosforge.org/repository/macports/contrib/MacPorts_Framework
-svn.revision            65491
+svn.revision            73027
 
 worksrcdir              MacPorts_Framework
 
@@ -31,7 +31,7 @@ if {"darwin" == ${os.platform}} {
   } elseif {8 == ${os.major}} {
     xcode.configuration     Release-Tiger
   } else {
-    ui_error "You need Mac OS X Tiger at least to build this port."
+    ui_error "You need at least Mac OS X Tiger to build this port."
     return -code error "incompatible Mac OS X version"
   }
 }
