New version of Pallet. Fixes #27084 and uses the new version of the framework.
git-svn-id: https://svn.macports.org/repository/macports/trunk@73037 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/sysutils/Pallet/Portfile
+++ b/dports/sysutils/Pallet/Portfile
@@ -4,7 +4,7 @@ PortSystem 1.0
 PortGroup xcode 1.0
 
 name                    Pallet
-version                 1.0
+version                 1.1
 categories              sysutils aqua macports
 maintainers             juanger
 description             Aqua application to control a MacPorts installation.
@@ -12,21 +12,30 @@ long_description        \
     Pallet is an aqua application that controls a MacPorts installation, including the \
     installation, upgrading, and removal of individual ports.
 homepage                http://www.macports.org
-#master_sites           
+#master_sites
 #distname               ${name}
 #checksums              md5 c586fd603d9978b306aee428ea39e329
 platforms               macosx
 
 fetch.type              svn
 svn.url                 http://svn.macosforge.org/repository/macports/contrib/Pallet
-svn.revision            65496
+svn.revision            73027
 
 worksrcdir              Pallet
 
 xcode.target            Pallet
 xcode.configuration     Release
 
-xcode.build.settings       FRAMEWORK_SEARCH_PATHS="${frameworks_dir}"
-xcode.destroot.settings    FRAMEWORK_SEARCH_PATHS="${frameworks_dir}"
+if {"darwin" == ${os.platform}} {
+  if {9 <= ${os.major}} {
+    xcode.configuration     Release
+  } else {
+    ui_error "You need at least Mac OS X Leopard to build this port."
+    return -code error "incompatible Mac OS X version"
+  }
+}
+
+xcode.build.settings       FRAMEWORK_SEARCH_PATHS='${frameworks_dir} Growl-1.2.1-Framework'
+xcode.destroot.settings    FRAMEWORK_SEARCH_PATHS='${frameworks_dir} Growl-1.2.1-Framework'
 
 depends_lib-append      port:MacPorts_Framework
