convertlit: add universal variant
git-svn-id: https://svn.macports.org/repository/macports/trunk@73041 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/textproc/convertlit/Portfile
+++ b/dports/textproc/convertlit/Portfile
@@ -34,20 +34,28 @@ post-extract {
     copy ${filespath}/Makefile ${worksrcpath}
     
     # DOS to UNIX line endings so we can patch
-    reinplace "s|\r||g" ${worksrcpath}/clit/Makefile
+    reinplace "s|\r||g" ${worksrcpath}/clit/Makefile \
+                        ${worksrcpath}/lib/Makefile
 }
 
 patchfiles              patch-clit-Makefile.diff \
-                        patch-clit-hexdump.c.diff
+                        patch-clit-hexdump.c.diff \
+                        patch-lib-Makefile.diff
 
 use_configure           no
 
 configure.cppflags-append -I${prefix}/include/libtommath
 
-build.args              CC="${configure.cc} ${configure.cc_archflags}" \
+variant universal {}
+if {[variant_isset universal]} {
+    set archflags ${configure.universal_cflags}
+} else {
+    set archflags ${configure.cc_archflags}
+}
+
+build.args              CC="${configure.cc} ${archflags}" \
                         CPPFLAGS="${configure.cppflags}" \
-                        LDFLAGS="${configure.ldflags}" \
-                        PREFIX="${prefix}"
+                        LDFLAGS="${configure.ldflags}"
 
 destroot {
     xinstall ${worksrcpath}/clit/clit ${destroot}${prefix}/bin
