--- a/dports/textproc/ebook-tools/Portfile
+++ b/dports/textproc/ebook-tools/Portfile
@@ -3,7 +3,7 @@
 PortSystem          1.0
 PortGroup           cmake 1.0
 name                ebook-tools
-version             0.1.1
+version             0.2.1
 categories          textproc
 maintainers         nomaintainer
 license             MIT
@@ -16,11 +16,12 @@ platforms           darwin
 homepage            http://sourceforge.net/projects/ebook-tools/
 master_sites        sourceforge
 
-checksums           md5     15946af6f946eabe8247cdef9ada2b88 \
-                    sha1    5c7c177914767412f3c8b145319fa4683755ac90 \
-                    rmd160  02ee38ed7175e94577f718cc68c468f4e9d229ea
+checksums           sha1    1340eb7141b453088d39e62bba771413053a6d18 \
+                    rmd160  0f4f35bfcc44eeae328b6e1bb3740a368735cec9
 
 depends_lib         port:libzip port:libxml2
+
+depends_run         port:convertlit
 
 post-destroot {
    xinstall -m 755 -d ${destroot}${prefix}/share/doc/${name}
