py26-virtualenvwrapper: run the right virtualenv (#19387)
git-svn-id: https://svn.macports.org/repository/macports/trunk@73043 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/python/py26-virtualenvwrapper/Portfile
+++ b/dports/python/py26-virtualenvwrapper/Portfile
@@ -25,3 +25,9 @@ checksums           md5 58a89a752e2b3b4e62b8bc3cd10836e3 \
 
 depends_lib-append  port:py26-distribute\
                     port:py26-virtualenv
+
+patchfiles          virtualenvwrapper_bashrc.diff
+post-patch {
+    reinplace s|__VIRTUALENV_BIN__|${python.prefix}/bin/virtualenv| \
+        ${worksrcpath}/virtualenvwrapper_bashrc
+}
