--- a/dports/textproc/ebook-tools/Portfile
+++ b/dports/textproc/ebook-tools/Portfile
@@ -2,13 +2,14 @@
 
 PortSystem          1.0
 PortGroup           cmake 1.0
+
 name                ebook-tools
 version             0.2.1
 categories          textproc
 maintainers         nomaintainer
 license             MIT
 
-description         Access and convert various ebook file formats 
+description         Access and convert various ebook file formats
 long_description    ${description}
 
 platforms           darwin
@@ -19,13 +20,16 @@ master_sites        sourceforge
 checksums           sha1    1340eb7141b453088d39e62bba771413053a6d18 \
                     rmd160  0f4f35bfcc44eeae328b6e1bb3740a368735cec9
 
-depends_lib         port:libzip port:libxml2
+depends_lib         port:libzip \
+                    port:libxml2
 
 depends_run         port:convertlit
 
 post-destroot {
-   xinstall -m 755 -d ${destroot}${prefix}/share/doc/${name}
-   xinstall -m 644 -W ${worksrcpath} LICENSE README TODO \
-      ${destroot}${prefix}/share/doc/${name}
+    xinstall -m 755 -d ${destroot}${prefix}/share/doc/${name}
+    xinstall -m 644 -W ${worksrcpath} \
+        LICENSE \
+        README \
+        TODO \
+        ${destroot}${prefix}/share/doc/${name}
 }
-
