farsight2: update to version 0.0.22, python configuration.
git-svn-id: https://svn.macports.org/repository/macports/trunk@73047 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/comms/farsight2/Portfile
+++ b/dports/comms/farsight2/Portfile
@@ -4,8 +4,7 @@
 PortSystem 1.0
 
 name            farsight2
-version         0.0.21
-revision        1
+version         0.0.22
 description     Farsight - Audio/Video Communications Framework
 long_description \
                 The Farsight project is an effort to create a framework \
@@ -19,9 +18,9 @@ platforms       darwin
 homepage        http://farsight.freedesktop.org/wiki/
 master_sites    http://farsight.freedesktop.org/releases/${name}/
 
-checksums       md5     5898612c389f3538a4160e677c03087a \
-                sha1    baf51f52eeeb81214b376ce1b9f33a22ccac7298 \
-                rmd160  198feb04be765cae836c09cc3492842e1788e56b
+checksums       md5     e1f540cf3ebab06c3d7db1f46b44ac88 \
+                sha1    315509c30c494ab7fb179d5222a996f52651428d \
+                rmd160  433d59500f6cfde1b7da6cad898ff59158382615
 
 depends_build   port:pkgconfig \
                 port:gtk-doc
@@ -52,9 +51,11 @@ universal_variant no
 variant python description {Enable bulding of Python bindings} {
                 configure.args-delete       --disable-python
                 depends_lib-append          port:py26-gst-python
-                set python_pkg_config_path  ${frameworks_dir}/Python.framework/Versions/2.6/lib/pkgconfig
+                set python_prefix           ${frameworks_dir}/Python.framework/Versions/2.6
+                set python_pkg_config_path  ${python_prefix}/lib/pkgconfig
                 configure.args-append       --with-pkg-config-path=${python_pkg_config_path}
-                build.env-append            PKG_CONFIG_PATH=${python_pkg_config_path}
+                build.env-append            PKG_CONFIG_PATH=${python_pkg_config_path} \
+                                            PATH=${python_prefix}/bin:$env(PATH)
 }
 
 livecheck.type  regex
