Better compatibility check. As suggested by Ryan Schmidt.
git-svn-id: https://svn.macports.org/repository/macports/trunk@73048 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/MacPorts_Framework/Portfile
+++ b/dports/devel/MacPorts_Framework/Portfile
@@ -25,15 +25,10 @@ worksrcdir              MacPorts_Framework
 
 xcode.target            MacPorts
 
-if {"darwin" == ${os.platform}} {
-  if {9 <= ${os.major}} {
-    xcode.configuration     Release
-  } elseif {8 == ${os.major}} {
-    xcode.configuration     Release-Tiger
-  } else {
-    ui_error "You need at least Mac OS X Tiger to build this port."
-    return -code error "incompatible Mac OS X version"
-  }
+xcode.configuration     Release
+
+platform darwin 8 {
+   xcode.configuration Release-Tiger
 }
 
 xcode.destroot.type     framework
