Better compatibility check. As suggested by Ryan Schmidt.
git-svn-id: https://svn.macports.org/repository/macports/trunk@73049 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/sysutils/Pallet/Portfile
+++ b/dports/sysutils/Pallet/Portfile
@@ -26,13 +26,10 @@ worksrcdir              Pallet
 xcode.target            Pallet
 xcode.configuration     Release
 
-if {"darwin" == ${os.platform}} {
-  if {9 <= ${os.major}} {
-    xcode.configuration     Release
-  } else {
-    ui_error "You need at least Mac OS X Leopard to build this port."
-    return -code error "incompatible Mac OS X version"
-  }
+platform darwin 8 {
+       pre-fetch {
+               ui_error "${name} requires Mac OS X 10.5 or greater."
+       }
 }
 
 xcode.build.settings       FRAMEWORK_SEARCH_PATHS='${frameworks_dir} Growl-1.2.1-Framework'
