--- a/dports/devel/orc/Portfile
+++ b/dports/devel/orc/Portfile
@@ -5,6 +5,7 @@ PortSystem          1.0
 
 name                orc
 version             0.4.11
+revision            1
 description         Orc - The Oil Runtime Compiler
 long_description    Orc is a library and set of tools for compiling and executing very simple programs that operate on arrays of data.
 maintainers         rmstonecipher openmaintainer
@@ -21,7 +22,7 @@ patchfiles          patch_configure.diff \
                     patch_orc-test_orcarray.c.diff \
                     patch_config.h.in.diff
 
-universal_variant   no
+configure.optflags-append -Xarch_i386 -O1
 
 livecheck.type      regex
 livecheck.url       ${master_sites}
