farsight2: increment revision in case anyone managed to build it with the wrong prefix.
git-svn-id: https://svn.macports.org/repository/macports/trunk@73053 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/comms/farsight2/Portfile
+++ b/dports/comms/farsight2/Portfile
@@ -5,6 +5,7 @@ PortSystem 1.0
 
 name            farsight2
 version         0.0.22
+revision        1
 description     Farsight - Audio/Video Communications Framework
 long_description \
                 The Farsight project is an effort to create a framework \
