schroedinger: now builds universal.
git-svn-id: https://svn.macports.org/repository/macports/trunk@73056 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/multimedia/schroedinger/Portfile
+++ b/dports/multimedia/schroedinger/Portfile
@@ -5,6 +5,7 @@ PortSystem      1.0
 
 name            schroedinger
 version         1.0.10
+revision        1
 categories      multimedia
 maintainers     devans
 platforms       darwin
@@ -18,12 +19,6 @@ long_description \
     Schroedinger is a high-speed implementation in C of the Dirac codec. \
     The Schroedinger software is available under any of the GPLv2, MIT or \
     MPL licences. Libraries may also be used under LGPL.
-
-#
-# port orc is not universal
-#
-
-universal_variant  no
 
 checksums       md5     9de088ccc314bb9e766cb3aa6510a0ef \
                 sha1    c8af4cb2bc54b7783ac20d7f4a39db4e31c1cac0 \
