pidgin: add build dependency on pkgconfig; see #25636 (maintainer timeout)
git-svn-id: https://svn.macports.org/repository/macports/trunk@73058 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/pidgin/Portfile
+++ b/dports/net/pidgin/Portfile
@@ -25,7 +25,8 @@ checksums           md5     2960d3e78e50d5bbcf4533c09ba467d8 \
 
 use_bzip2           yes
 
-depends_build       port:libtool
+depends_build       port:libtool \
+                    port:pkgconfig
 
 depends_lib         port:audiofile \
                     port:dbus \
@@ -95,7 +96,7 @@ variant no_x11 {
 variant quartz requires no_x11 {
     configure.args-append   --disable-gestures
 
-    depends_build           port:autoconf \
+    depends_build-append    port:autoconf \
                             port:automake \
                             port:intltool
 
