--- a/dports/devel/libdatrie/Portfile
+++ b/dports/devel/libdatrie/Portfile
@@ -4,7 +4,7 @@
 PortSystem          1.0
 
 name                libdatrie
-version             0.1.2
+version             0.2.4
 categories          devel
 platforms           darwin
 maintainers         nomaintainer
@@ -15,13 +15,13 @@ long_description    ${description}
 homepage            http://linux.thai.net/~thep/datrie/datrie.html
 master_sites        ftp://linux.thai.net/pub/ThaiLinux/software/libthai/
 
-checksums           md5     3eaedd5452149e11547a0dc74ee3fcfd \
-                    sha1    cffda60f9f5a51a256273c72c5abed0448a6df4c \
-                    rmd160  6bf5155b282974a4b6cd1bfadd87139b33710f49
+checksums           md5     7f7d592114f98db9e4c7171c3f2befc5 \
+                    sha1    723fb01530c7917982cfdd68deb2361d16a6e6ab \
+                    rmd160  49b05944ea7cb943cd896df82c7be1f91a434651
 
-patchfiles          patch-datrie_Makefile.in.diff
-
-configure.args      --mandir=${prefix}/share/man --infodir=${prefix}/share/info --disable-doxygen-doc
+configure.args      --mandir=${prefix}/share/man \
+                    --infodir=${prefix}/share/info \
+                    --disable-doxygen-doc
 
 use_parallel_build  yes
 
