xorg-libXi: Bump to 1.4.0
git-svn-id: https://svn.macports.org/repository/macports/trunk@73062 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/x11/xorg-libXi/Portfile
+++ b/dports/x11/xorg-libXi/Portfile
@@ -3,7 +3,7 @@
 PortSystem 1.0
 
 name            xorg-libXi
-version         1.3.2
+version         1.4.0
 categories      x11 devel
 maintainers     jeremyhu openmaintainer
 description     X.org libXi
@@ -13,9 +13,9 @@ long_description X11 Input Extension
 master_sites     http://xorg.freedesktop.org/archive/individual/lib/
 
 distname    libXi-${version}
-checksums           md5     26f93781356b1fdde08f7ee9cd5884d6 \
-                    sha1    50fdac374d45feb4fe39938d3530bd4f314f3a85 \
-                    rmd160  c3811a4c3ed3b8d216ba1ac53b7d51fc2beaa449
+checksums           md5     4ccdfe866f94c99b9190d16ffcfb3bdc \
+                    sha1    cb84687d471ec88e5c2bcb36540ce5207cfc2c1e \
+                    rmd160  c28abad177ef89efa111984643aa3f0a117b7c2c
 
 use_bzip2   yes
 use_parallel_build      yes
@@ -24,6 +24,46 @@ depends_build   port:pkgconfig
 
 depends_lib     port:xorg-libXext \
 		port:xorg-inputproto
+
+configure.args \
+	--without-asciidoc \
+	--without-xmlto \
+	--without-fop \
+	--disable-specs
+
+build.args V=1
+
+# Depending on ghostscript for the PDF documentation creates a dependency
+# loop, so you may want to install first without the docs variant
+variant docs description "Install extra documentation" {
+	depends_build-append \
+		port:asciidoc \
+		port:fop \
+		port:xmlto \
+		port:xorg-sgml-doctools
+
+	depends_skip_archcheck-append \
+		asciidoc \
+		fop \
+		xmlto
+
+	configure.args-delete \
+		--without-asciidoc \
+		--without-xmlto \
+		--without-fop \
+		--disable-specs
+
+	configure.args-append \
+		--with-asciidoc \
+		--with-xmlto \
+		--with-fop \
+		--enable-specs
+
+	configure.env-append \
+		ASCIIDOC="${prefix}/bin/asciidoc" \
+		XMLTO="${prefix}/bin/xmlto" \
+		FOP="${prefix}/bin/fop"
+}
 
 livecheck.type  regex
 livecheck.url   [lindex ${master_sites} 0]?C=M&O=D
