--- a/dports/editors/org-mode/Portfile
+++ b/dports/editors/org-mode/Portfile
@@ -4,7 +4,7 @@
 PortSystem          1.0
 
 name                org-mode
-version             7.01h
+version             7.3
 categories          editors
 maintainers         dports
 platforms           darwin
@@ -19,9 +19,9 @@ homepage            http://orgmode.org/
 master_sites        ${homepage}
 distname            org-${version}
 
-checksums           md5     111db7b77eb420b5695a109799b723f8 \
-                    sha1    0fc8b62e1a2582b9af6238c847ff1fd50522904f \
-                    rmd160  23a529d6844746f2373021ee6324946f4fb4cbf4
+checksums           md5     9e37d9a7374fc10683ff061671fcf531\
+                    sha1    c4b87790f308b99b47a503d9a6ceb51889cc48c4 \
+                    rmd160  c919a5348175d9c60221e3eb01a10e7781b84a0a
 
 depends_lib         port:emacs
 depends_build       port:texinfo
